--- a/Blog.html
+++ b/Blog.html
@@ -6,6 +6,6 @@
 <body>
 	<div text align="center"><img src="/home/smartdev/Documents/PROJECT PDEV/Testimonials.jpg"></di>
 		
-<div text align="center"><img src="/home/smartdev/Documents/PROJECT PDEV/Blog.jpg"></div>
+<div text align="center"><img src="/home/smartdev/Documents/PROJECT PDEV./Blog.jpg"></div>
 </body>
 </html>
