--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
 </nav>
 
      <div class="container-fluid">
-     <img src="/home/smartdev/Documents/PROJECT PDEV/Text.jpg">
-      <img src="/home/smartdev/Documents/PROJECT PDEV/unsplash_IGfIGP5ONV0.jpg" >
-      <img src="/home/smartdev/Documents/PROJECT PDEV/Image.jpg">
-      <img src="/home/smartdev/Documents/PROJECT PDEV/unsplash_1qnIDA6gZ1g.jpg">
+     <img src="/home/smartdev/Documents/PROJECT PDEV./Text.jpg">
+      <img src="/home/smartdev/Documents/PROJECT PDEV./unsplash_IGfIGP5ONV0.jpg" >
+      <img src="/home/smartdev/Documents/PROJECT PDEV./Image.jpg">
+      <img src="/home/smartdev/Documents/PROJECT PDEV./unsplash_1qnIDA6gZ1g.jpg">
 
       <div text align="right">
      <img src="/home/smartdev/Documents/PROJECT PDEV/unsplash_nKyAtvyTcuA.jpg">
   </div>
 
-      <div text align="left"><img src="/home/smartdev/Documents/PROJECT PDEV/unsplash_Wu0MmDYdUB4.jpg">  
+      <div text align="left"><img src="/home/smartdev/Documents/PROJECT PDEV./unsplash_Wu0MmDYdUB4.jpg">  
       </div>
-       <div text align="center"><img src="/home/smartdev/Documents/PROJECT PDEV/Clients and partner (1).jpg"></div>
+       <div text align="center"><img src="/home/smartdev/Documents/PROJECT PDEV./Clients and partner (1).jpg"></div>
      
-    <p> <div text align="center"><img src="/home/smartdev/Documents/PROJECT PDEV/Foodtuck (2).png"></div></div>
+    <p> <div text align="center"><img src="/home/smartdev/Documents/PROJECT PDEV./Foodtuck (2).png"></div></div>
      </p>
  </div>
  
